# astrocook

./: .coverage  .gitignore  Astrocook.spec  B1122-168_spec.fits  B1122_all_spec.fits  B1937_Lya_f_spec.fits  B1937_all_spec.fits  B2126-15_part2_spec.fits  B2126-15_part3_spec.fits  B2126-15_part_spec.fits  CHANGELOG.md  ChangeLog.txt  FLINE_PRE.fits  J0940_CIV_1_spec.fits  J0940_CIV_2_spec.fits  J0940_CIV_f_spec.fits  J0940_Lya_2_spec.fits  J0940_Lya_f_2_spec.fits  J0940_Lya_forest_1_spec.fits  J0940_Lya_forest_2_spec.fits  J0940_Lya_spec.fits  MANIFEST.in  Prompt to restart (29-10-2025).gdoc  README.md  RSPEC.fits  RSPEC_1.fits  Usability Hotspots.gdoc  _config.yml  ac_gui  ac_gui.py  ac_nogui.py  astrocookie.icns  build_app.sh  changelog.html  cont_test.py  credits.html  current_prompt.md  default.json  defaults.json  deploy-jekyll-develop.yml  (+53 more)
QSO_constants/: cosmic.py  popler_das.py
_modules/: index.html
api/: astrocook.core.html  astrocook.core.session.html  astrocook.core.spectrum.html  astrocook.core.structures.html  astrocook.core.system_list.html  astrocook.fitting.bayesian_fitter.html  astrocook.fitting.html  astrocook.fitting.voigt_fitter.html  astrocook.fitting.voigt_model.html  astrocook.recipes.absorbers.html  astrocook.recipes.continuum.html  astrocook.recipes.edit.html  astrocook.recipes.file.html  astrocook.recipes.flux.html  astrocook.recipes.html
assets/: icon_3d_HR.icns  icon_disk_3d_HR.icns
astrocook/: __init__.py  __main__.py  abs.py  app.py  cont.py  cookbook.py  cookbook_absorbers.py  cookbook_absorbers_old.py  cookbook_continuum.py  cookbook_continuum_old.py  cookbook_edit.py  cookbook_edit_old.py  cookbook_flux.py  cookbook_flux_old.py  cookbook_general.py  cookbook_graph.py  cookbook_sandbox.py  cookbook_synthetic.py  cookbook_templates.py  cookbook_view.py  cookbook_view_old.py  defaults.py  feat_list.py  fit.py  format.py  frame.py  functions.py  graph.py  gui.py  gui_dialog.py  gui_elem.py  gui_graph.py  gui_image.py  gui_log.py  gui_menu.py  gui_menu_old.py  gui_table.py  interv_list.py  io.py  line.py  (+35 more)
astrocook.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
astrocook_output/: results_los_203.csv  results_los_203_auto.csv  results_los_209.csv  results_los_213.csv  results_los_226.csv  results_los_230.csv  results_los_250.csv  session_los_202.acs2  session_los_203.acs2  session_los_203_auto.acs2  session_los_209.acs2  session_los_212.acs2  session_los_213.acs2  session_los_214.acs2  session_los_218.acs2  session_los_219.acs2  session_los_226.acs2  session_los_230.acs2  session_los_236.acs2  session_los_250.acs2
dev/: changelog.html  credits.html  genindex.html  index.html  installation.html  objects.inv  py-modindex.html  reference.html  search.html  searchindex.js
docs/: Gemfile  _config.yml  about.markdown  about.md  absorbers.md  absorbers_cb.md  common.md  conf.py  continuum.md  continuum_cb.md  cookbook.md  credits.md  data.md  edit_cb.md  flux_cb.md  flux_cb.md.old  general_cb.md  graphs.md  gui.md  index.md  installation.md  merge.md  other_cb.md  plots.md  reference.md  script.md  series.md  setup.md  start.md  structures.md  synthetic_cb.md  tables.md  templates_cb.md  workflows.md
docs_backup/: continuum_cb.md.old  data.md  flux_cb.md  general_cb.md.old  merge.md  other.md  resources.md  templates_cb.md.old
issues/: issue_222.json  issue_229.json  issue_234.json  issue_235.json  issue_239.json  issue_241.json  issue_243.json  issue_245.json  issue_255.json  issue_258.json  issue_259.json  issue_261.json  issue_268.json  issue_294.json  issue_312.json  issue_312_B.json  issue_329.json  issue_329_massive.json  issue_329_speed.json  issue_329_speed_chunks.json  issue_336.json  issue_344.json  issue_364.json  issue_369.json
legacy_home/: ac_gui  ac_gui.py  ac_nogui.py  current_status.md  current_status_short.md  defaults.json
output/: master_catalog.csv  results_los_202_OVI.csv  results_los_203_OVI.csv  results_los_212_OVI.csv  results_los_214_OVI.csv  results_los_218_OVI.csv  results_los_219_OVI.csv  results_los_231_OVI.csv  results_los_236_OVI.csv  results_los_250_OVI.csv  results_los_251_OVI.csv  results_los_256_OVI.csv  results_los_260_OVI.csv  results_los_268_OVI.csv  results_los_283_OVI.csv  results_los_285_OVI.csv  results_los_293_OVI.csv  session_los_202_OVI.acs2  session_los_203_OVI.acs2  session_los_209_OVI.acs2  session_los_212_OVI.acs2  session_los_213_OVI.acs2  session_los_214_OVI.acs2  session_los_218_OVI.acs2  session_los_219_OVI.acs2  session_los_226_OVI.acs2  session_los_230_OVI.acs2  session_los_231_OVI.acs2  session_los_236_OVI.acs2  session_los_250_OVI.acs2  session_los_251_OVI.acs2  session_los_256_OVI.acs2  session_los_260_OVI.acs2  session_los_268_OVI.acs2  session_los_283_OVI.acs2  session_los_285_OVI.acs2  session_los_293_OVI.acs2
output_cii/: mockspec_ray2_node1_no14_SNR52.3_logNCII14.53_snr40.0.acs2  mockspec_ray2_node1_no14_SNR52.3_logNCII14.53_snr40.0_components.csv  noiseless_old_ray_node10_no277_SNR18.5_logNCII14.47_snr40.0.acs2  noiseless_old_ray_node10_no277_SNR18.5_logNCII14.47_snr40.0_components.csv
test/: equalize.json  equalize_combine.json  equalize_combine_rebin.json  qso_nir.fits  qso_uvb.fits  qso_uvb_vis.acs  qso_uvb_vis.json  qso_vis.fits  qso_vis_civ.json  rescale.json
tests/: .coverage  _test_v2_io.py  batch_driver.py  clip_flux.json  find_lines.json  import_systs.json  inspect_data.py  launch_pyside.py  launch_pyside_app.py  legacy_test_cookbook_edit.py  model_metals.json  parallel_orchestrator.py  run_cii_batch.py  simulate_and_fit_cii.py  spec_from_spec_and_systs.json  test___init__.py  test_bayesian_prototype.py  test_cookbook_edit.py  test_cookbook_edit_mask.py  test_defaults.json  test_defaults.py  test_feat_list.acs  test_feat_list.acs.bck  test_feat_list.py  test_features_manual.py  test_fitting.py  test_fitting_integration.py  test_spectrum_operations.py  test_v2_io.py  test_v2_io_integrity.py  verify_pipeline.py  verify_pipeline_stress.py
tutorials/: absorption_systems.html  continuum_fitting.html  editing_data.html  flux_operations.html  index.html  (+1 more)
(+517 files in other folders)
